    removed from Octave 5.0.

      Function             | Replacement
      ---------------------|------------------
      bitmax               | flintmax
      mahalanobis          | mahal in Octave Forge statistics pkg
      md5sum               | hash
      octave_config_info   | __octave_config_info__
      onenormest           | normest1
      sleep                | pause
      usleep               | pause
      wavread              | audioread
      wavwrite             | audiowrite

 ** Deprecated graphics properties.

    The following properties or allowed corresponding values have been
    deprecated in Octave 5.0 and will be removed from Octave 7 (or
    whatever version is the second major release after 5.0):

      Object               | Property                | Value
      ---------------------|-------------------------|-------------------
                           |                         |

 ** The following properties or allowed corresponding values were
    deprecated in Octave 4.2 and have been removed from Octave 5.0:

      Object               | Property                | Value
      ---------------------|-------------------------|-------------------
      axes                 | xaxislocation           | "zero"
                           | yaxislocation           | "zero"
      patch                | normalmode              |
      surface              | normalmode              |

  ** Certain C++ predicate test functions have been deprecated and
     replaced with the same functionality under the equivalent name used
     in the Octave programming language.  These changes make it easier
     for new programmers familiar with Octave to understand code written
     in C++.

      Function             | Replacement
      ---------------------|------------------
      is_hghandle          | ishghandle

---------------------------------------------------------

See NEWS.4 for old news.